name: file-server
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: anshu.avinash35@gmail.com
category: Web
author: Anshu Avinash

executable file-server
    build-depends:
        base >=4.7 && <4.8,
        scotty >=0.9 && <1.0,
        transformers >=0.4 && <0.5,
        wai-extra >=3.0 && <3.1,
        wai-middleware-static >=0.7 && <0.8,
        blaze-html >=0.8 && <0.9,
        bytestring >=0.10 && <0.11,
        filepath >=1.4 && <1.5
    main-is: Main.hs
    default-language: Haskell2010
    other-extensions: OverloadedStrings
